# vacation-calendar

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/vacation_calendar/: __init__.py  chore.py  work_holiday.ipynb
src/vacation_calendar/frontend/: streamlit.py
tests/chore/: chore_test.py
tests/vacation_calendar/chore/: chore_test.py
vacation_calendar/: chore.py
vacation_calendar/frontend/: streamlit.py
